<resources>
    <string name="app_name">Eden</string>
    <string name="grocery_item">Grocery Items</string>
    <string name="kilogram">Kilograms</string>
    <string name="addText">+</string>
    <string name="removeText">-</string>
    <string name="submit_btn">Enter</string>
    <string name="quantity_text">Quantity</string>
    <string name="kg_hint">Enter the weight(kg)</string>
    <string name="quantity_hint">Enter the Amount</string>
    <string name="produced">The amount of Carbon Emissions Produced is</string>
    <string name="scanbarcode">Click to scan the barcode of your product</string>

    <string-array name="grocery_list">
        <item>Lamb</item>
        <item>Beef</item>
        <item>Cheese</item>
        <item>Pork</item>
        <item>Turkey</item>
        <item>Chicken</item>
        <item>Tuna</item>
        <item>Eggs</item>
        <item>Potatoes</item>
        <item>Rice</item>
        <item>Nuts</item>
        <item>Beans</item>
        <item>Vegetables</item>
    </string-array>

    <string name="scan">Scan</string>
</resources>
