<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context="com.example.vero.eden.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_weight="1">


        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:text="@string/grocery_item"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="#55A802"
                        android:gravity="center"/>

                    <TextView
                        android:text="@string/kilogram"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="#55A802"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>

                    <TextView
                        android:text="@string/quantity_text"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_weight="1"
                        android:textColor="#55A802"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="6sp"
                    android:layout_weight="1"
                    android:gravity="end"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/addSpinnerLayout">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Spinner
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/course_weight"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:entries="@array/grocery_list">
                        </Spinner>
                        <EditText
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:background="@drawable/edittext_border"
                            android:hint="@string/kg_hint"
                            android:textSize="12sp">
                        </EditText>
                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">
                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_weight="3"
                                android:gravity="end"/>
                            <EditText
                                android:layout_width="fill_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:textSize="10sp"
                                android:background="@drawable/edittext_border"
                                android:hint="@string/quantity_hint">
                            </EditText>
                            <TextView
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:layout_weight="3"
                                android:gravity="end"/>
                        </LinearLayout>

                    </LinearLayout>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:textSize="9sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:textSize="14sp"
                        android:layout_weight="1"
                        android:gravity="end"/>
                    <Button
                        android:layout_weight="3"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/removeText"
                        android:id="@+id/removeCourseButton"
                        android:onClick="removecourseGrade"

                        android:background="@drawable/button_border"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"

                        android:textSize="14sp"
                        android:layout_weight="3.4"
                        android:gravity="end"/>

                    <Button
                        android:layout_weight="3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addText"
                        android:id="@+id/addCourseButton"
                        android:onClick="addcourseGrade"

                        android:background="@drawable/button_border"/>
                </LinearLayout>
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_btn"
                    android:id="@+id/submitGpaBtn"
                    android:onClick="submitGpa"
                    android:background="@drawable/button_border"/>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#55A802"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/addText"
                android:onClick="addcourseGrade"
                android:background= "@drawable/homeicon"/>

            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/addText"
                android:onClick="addcourseGrade"
                android:background= "@drawable/licon"/>

            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/addText"
                android:onClick="addcourseGrade"
                android:background= "@drawable/stockicon4"/>

            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/addText"
                android:onClick="addcourseGrade"
                android:background= "@drawable/cameraicon"/>

            <Button
                android:layout_weight="1.3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/removeText"
                android:background="#55A802"/>
        </LinearLayout>

    </Toolbar>
</LinearLayout>