<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/nbackground"
    tools:context="com.example.vero.eden.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scanbarcode"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="#55A802"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <Button android:id="@+id/scan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:onClick="scanNow"
        android:background="@drawable/barcodepic"/>
    <TextView
        android:id="@+id/scan_format"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scan_button" />
    <TextView
        android:id="@+id/scan_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scan_format"/>
    </LinearLayout>
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#55A802">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:id="@+id/addItemBtn"
                android:text="@string/addText"
                android:onClick="splashscreen"
                android:background= "@drawable/homeicon"/>

            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/addText"
                android:onClick="mainactivity"
                android:background= "@drawable/licon"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/addText"
                android:onClick="graphscreen"
                android:background= "@drawable/stockicon4"/>
            <ImageButton
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/addText"
                android:background= "@drawable/cameraicon"/>
            <Button
                android:layout_weight="1.3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/removeText"
                android:background="#55A802"/>
        </LinearLayout>
    </Toolbar>
    </LinearLayout>